changed header width to vw to fix extra space from scrollbar

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   @include flex(row, center, center);
   position: fixed;
   z-index: 1000;
-  width: 100%;
+  width: 100vw;
   height: $header-height;
   background: white;
   padding: 1rem;
